<resources>
    <string name="app_name">Hackathon_8_Money_Talks</string>
    <string name="header_text">Investing is hard! But with "Money Talks", Now it\'s easy!</string>
    <string name="risk_level_text">Please select your risk level</string>
    <string name="low_risk">Low Risk</string>
    <string name="moderate_risk">Moderate Risk</string>
    <string name="high_risk">High Risk</string>
    <string name="dont_know">I don\'t know!</string>
    <string name="submit">Submit</string>
    <string name="faq"><u>FAQ</u></string>
    <string name="resources">Resources</string>
    <string name="question01">How old are you?</string>
    <string name="question02">What is your occupation?</string>
    <string name="question03">What is your net worth?</string>
    <string name="question04">What is your income?</string>
    <string name="question05">What is your marital status?</string>
    <string name="question06">Do you have any children under 18?</string>
    <string name="question07">What is your current living situation?</string>
    <string name="question08">What is your current credit score?</string>
    <string name="question09">When do you anticipate needing this money?</string>
    <string name="question10">How would you rate your experience level in investing?</string>
    <string name="q01_choice1">18 – 34</string>
    <string name="q01_choice2">35 – 50</string>
    <string name="q01_choice3">51 – 64</string>
    <string name="q01_choice4">65+</string>
    <string name="q02_choice1">Employed</string>
    <string name="q02_choice2">Unemployed</string>
    <string name="q02_choice3">Student</string>
    <string name="q02_choice4">Retired</string>
    <string name="q03_choice1">$0 – $25k</string>
    <string name="q03_choice2">$26k – 50k</string>
    <string name="q03_choice3">$51k – $80k</string>
    <string name="q03_choice4">$80k+</string>
    <string name="q04_choice1">$0 – $25k</string>
    <string name="q04_choice2">$26k – 50k</string>
    <string name="q04_choice3">$51k – $80k</string>
    <string name="q04_choice4">$80k+</string>
    <string name="q05_choice1">Single</string>
    <string name="q05_choice2">Married</string>
    <string name="q05_choice3">Separated</string>
    <string name="q05_choice4">Divorced/Widowed</string>
    <string name="q06_choice1">Yes</string>
    <string name="q06_choice2">No</string>
    <string name="q07_choice1">Home Owner</string>
    <string name="q07_choice2">Renter</string>
    <string name="q07_choice3">Other</string>
    <string name="q08_choice1">350 – 579</string>
    <string name="q08_choice2">560 – 669</string>
    <string name="q08_choice3">670 – 739</string>
    <string name="q08_choice4">740 – 799</string>
    <string name="q08_choice5">800 – 850</string>
    <string name="q09_choice1">2 weeks</string>
    <string name="q09_choice2">2 – 8 months</string>
    <string name="q09_choice3">1 year</string>
    <string name="q09_choice4">1+ years</string>
    <string name="q10_choice1">Little to no experience</string>
    <string name="q10_choice2">Fairly experienced</string>
    <string name="q10_choice3">I\'ve made some investments in the past</string>
    <string name="q10_choice4">Experienced Investor</string>
    <string name="start_survey_text">Please complete this brief survey to determine an appropriate risk level that meets your needs</string>
    <string name="loading_text">Calculating Your Result…\nOne Moment Please</string>
    <string name="toolbar_title">Money Talks</string>
    <string name="savings_account">1. Savings Account</string>
    <string name="faq_Question1">Why should I invest in stocks?</string>
    <string name="faq_Question2">How do I know what kinds of stocks to invest in?</string>
    <string name="faq_Question3">What’s the benefit of investing in funds over individual stocks and bonds?</string>
    <string name="faq_Question4">Why is it important to invest in both stocks and bonds?</string>
    <string name="faq_Question5">Why are bonds considered safer than stocks?</string>
    <string name="faq_Question6">Why do stock prices go up and down so much?</string>
    <string name="faq_Question7">How long should I hold onto a stock?</string>
    <string name="faq_Question8">How long should I hold onto a bond?</string>
    <string name="faq_Question9">How can I tell what’s a normal market fluctuation and what’s not?</string>
    <string name="faq_Question10">What should I do when the market drops a lot in a short period?</string>
    <string name="faq_Question11">How many bear and bull markets have there been?</string>
    <string name="faq_Question12">What other investments besides stocks and bonds can I consider?</string>
    <string name="faq_Question13">Why can’t I invest in a private company?</string>
    <string name="faq_Question14">How many different investment accounts should I have?</string>
    <string name="nerdwalletLink">https://www.nerdwallet.com/blog/investing/how-to-invest-in-stocks/</string>
    <string name="investopediLink">https://www.investopedia.com/university/beginner/beginner1.asp</string>
    <string name="babypipsLink">https://www.babypips.com/</string>
    <string name="thebalanceLink">https://www.thebalance.com/stocks-4073971</string>
    <string name="faq_Answer1">• They provide an opportunity to grow your money over time. While there are risks—stocks can go up and down, and companies can go bankrupt—there’s also the opportunity for larger returns than you might get by putting all your money in a savings account (or under your mattress). Investing can also provide income outside of your paycheck through dividends.</string>
    <string name="faq_Answer2">• It depends on what you need your investments to do for you, and what holes you need to fill in your portfolio. If you’re looking for rapid growth and can handle a lot of risk, you might look to new tech companies, for example. If you want a safer bet, blue-chip stocks might be for you. To diversify your portfolio, it’s wise to invest in a range of different stocks and sectors.   • When deciding whether to buy shares of a company, you may want to consider its earnings history and projections and the current stock price relative to its 52-week high and low. You can also read analysts’ reports and ratings.   • Of course, investing in individual stocks isn’t the only option. You can invest in baskets of stocks through index, exchange-traded or mutual funds.</string>
    <string name="faq_Answer3">• If you invest all your money in one stock, and it goes down, you can lose a lot of money (assuming it doesn’t go back up before you need to sell). But if you invest in a mutual fund or ETF, you can own hundreds of different stocks and bonds, allowing you broad diversification with just one investment.</string>
    <string name="faq_Answer4">• Owning both stocks and bonds is how many investors diversify their portfolios, as stocks tend to be a riskier investment, while bonds are generally considered safer. For that reason, as you get older—and closer to retirement age—experts recommend shifting your asset allocation toward owning more bonds.   • One rule of thumb to simplify asset allocation is the Rule of 100, in which you subtract your age from 100 in order to figure out what percentage of your portfolio should be stocks. For example, a 30 year old would aim for 70 percent stocks, 30 percent bonds, while a 60 year old’s portfolio would be made up of 40 percent stocks and 60 percent bonds.</string>
    <string name="faq_Answer5">• Bonds are essentially loans you give an issuer (typically a company or a government agency) with the expectation that you’ll get paid back, with interest, over a specific timeframe. While there’s always the risk that the issuer will encounter financial troubles and be unable to make good on the plan, this isn’t a common occurrence—making bonds a relatively safe investment.   • That’s compared to stocks, which are investments in a public company. Your shares go up and down with the company’s value, which can be affected by a wide array of (often unpredictable) factors, including management decisions, government regulations and macroeconomic events.</string>
    <string name="faq_Answer6">• Ups and downs are completely normal. A lot of factors can influence fluctuations—from movements in oil prices or unemployment numbers to the presidential election. If your plan is to invest for the long term, you are bound to experience some day-to-day volatility along the way. But, historically, the stock market has recovered from downturns, and continued to climb, over time.</string>
    <string name="faq_Answer7">• Generally, you should only invest in stocks or stock funds with money that you won’t need for at least a few years, as the market fluctuates and you don’t want to be forced to sell a stock that’s down because you need the money. Investors often have mid- to long-term goals in mind, like saving up for a down payment on a house you plan to buy down the road, or for retirement.   • If you’re concerned about a particular investment that’s losing value, go back to square one and think about why you chose it in the first place and what’s changed since. For example, if the company or fund has experienced big management or strategy changes, you might reconsider its place in your portfolio. On the other hand, if nothing much has changed about the company, the price fell in step with the market at large or the sector it’s in, and you believe in the company’s future and projected earnings, it could be worth hanging onto—and, perhaps, buying more shares in—as the market has historically recovered from downturns over time.</string>
    <string name="faq_Answer8">• Typically, you’d hold a bold to maturity (or when the original amount loaned becomes due) to reap the full benefit of a payback, but you can sell early on the secondary market via a broker. Just understand that you may wind up with more or less than what you paid originally, as the value of the bond may shift on this market. If interest rates rise, the bond’s value may drop—and vice versa. And you may be charged a commission by the broker.</string>
    <string name="faq_Answer9"><![CDATA[•Comparing stock performance to an appropriate benchmark is a good way to gauge how it’s doing. For example, on a day when Standard & Poor’s 500-stock index drops, a drop in the price of a large-company stock you own can be expected.   • On the other hand, if your stock falls 5 to 10 percent more than its benchmark, you might want to take a closer look at what’s going on with the company and reassess its place in your portfolio. Remember, though, that many individual stocks can experience dips and then rebound. So it’s important to look at what’s triggering the drop in a particular stock’s value, and how it’s performed over the long run, when deciding how to proceed.]]></string>
    <string name="faq_Answer10">• Don’t panic. A well-diversified portfolio is designed to grow over the long term—and offer some protection against market fluctuations. Keep your longer term goals in mind, and don’t let your emotions drive your decisions!</string>
    <string name="faq_resource_textview_text">Resources</string>
    <string name="faq_nerdwallet_text">Nerdwallet</string>
    <string name="faq_investopedia_text">Investopedia</string>
    <string name="faq_babypips_text">Babypips</string>
    <string name="faq_the_balance_text">The Balance</string>
</resources>