<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/main_fragment_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/header_text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/stockchart" />

    <TextView
        android:id="@+id/main_fragment_risk_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingLeft="40dp"
        android:paddingBottom="8dp"
        android:text="@string/risk_level_text"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/low_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low_risk"
            android:paddingBottom="8dp"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/moderate_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/moderate_risk"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/high_risk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_risk"
            android:paddingBottom="8dp"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dont_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/dont_know"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/main_fragment_faq_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:linksClickable="true"
        android:paddingTop="16dp"
        android:text="@string/faq"
        android:textColor="@color/hyperlinkBlue"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>