<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.FrequentlyAskedQuestions">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/cardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycler_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resource_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/faq_resource_textview_text"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nerdwallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/faq_nerdwallet_text"
                android:textColor="#2e48b2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/investopedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/faq_investopedia_text"
                android:textColor="#2e48b2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/babypips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/faq_babypips_text"
                android:textColor="#2e48b2"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/thebalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/faq_the_balance_text"
                android:textColor="#2e48b2"
                android:textSize="10sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>